2000-08-26  Bruno Haible  <haible@clisp.cons.org>

        * autoconf/acgeneral.m4 (AC_OUTPUT): Use braces in exec_prefix default
          value, not parens.

2000-08-18  Bruno Haible  <haible@clisp.cons.org>

        * include/cl_univpoly_modint.h: Fix typo.

2000-07-13  Bruno Haible  <haible@clisp.cons.org>

        * src/float/input/cl_F_read_stream.cc (number_char_p): Accept '_',
          used as precision marker for floats.
          Reported by Keith Briggs (in 1998) and Thomas Roessler.
        * src/integer/input/cl_I_read_stream.cc (number_char_p): Likewise.
        * src/rational/input/cl_RA_read_stream.cc (number_char_p): Likewise.
        * src/real/input/cl_R_read_stream.cc (number_char_p): Likewise.
        * src/complex/input/cl_N_read_stream.cc (number_char_p): Likewise.

2000-06-22  Bruno Haible  <haible@clisp.cons.org>

        * include/cl_object.h: Rename cl_word_size to cl_pointer_size.
        * include/cl_types.h (HAVE_FAST_LONGLONG): Also define on Irix6
          with N32 ABI.
          (cl_word_size): New macro.
        * src/float/sfloat/cl_SF.h: Use cl_pointer_size instead of
          cl_word_size.

2000-06-05  Richard Kreckel  <kreckel@ginac.de>

        * doc/*, INSTALL: Mention that both shared and static library are
          are now build by default.

2000-05-31  Bruno Haible  <haible@clisp.cons.org>

        * tests/exam_I_floor.cc (integer_floor_tests): Add one more entry.
          From a sample that fails with gcc-2.95.2 on Sparc.
        * tests/exam_I_gcd.cc (integer_gcd_tests): Likewise.

2000-05-30  Richard Kreckel  <kreckel@ginac.de>

        * configure.in, autoconf/aclocal.m4 (CL_GMP_H_VERSION, CL_GMP_CHECK):
          New macros.
        * configure.in, include/cl_config.h.in (CL_VERSION, CL_VERSION_MINOR,
          CL_VERSION_PATCHLEVEL): New definitions.
        * autoconf/config.guess, autoconf/config.sub, autoconf/ltconfig,
          autoconf/ltmain.sh: updated from FSF (libtool 1.3.5, etc).